{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 22,
  "lineage": "83e94667-c4d8-b07d-8327-97661ce45f73",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "grafana",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "monitoring/grafana",
            "metadata": [
              {
                "annotations": {
                  "external-dns.alpha.kubernetes.io/hostname": "grafana.soumith.undernet.cs.odu.edu",
                  "traefik.ingress.kubernetes.io/router.entrypoints": "web"
                },
                "generate_name": "",
                "generation": 2,
                "labels": {},
                "name": "grafana",
                "namespace": "monitoring",
                "resource_version": "1466638",
                "uid": "fcc1df47-9102-4931-943c-544e1dfab712"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "traefik",
                "rule": [
                  {
                    "host": "grafana.soumith.undernet.cs.odu.edu",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "prometheus-grafana",
                                    "port": [
                                      {
                                        "name": "http-web",
                                        "number": 0
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "172.18.6.105"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "helm_release.prometheus",
            "kubernetes_namespace.monitoring"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "monitoring/prometheus",
            "metadata": [
              {
                "annotations": {
                  "external-dns.alpha.kubernetes.io/hostname": "prometheus.soumith.undernet.cs.odu.edu",
                  "traefik.ingress.kubernetes.io/router.entrypoints": "web"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "prometheus",
                "namespace": "monitoring",
                "resource_version": "1466482",
                "uid": "cd86e15d-8283-4c06-867f-eeddce531621"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "traefik",
                "rule": [
                  {
                    "host": "prometheus.soumith.undernet.cs.odu.edu",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "prometheus-kube-prometheus-prometheus",
                                    "port": [
                                      {
                                        "name": "http-web",
                                        "number": 0
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "172.18.6.105"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.kubernetes_service.prometheus_server",
            "helm_release.prometheus",
            "kubernetes_namespace.monitoring"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "monitoring",
            "metadata": [
              {
                "generation": 0,
                "name": "monitoring",
                "resource_version": "1436413",
                "uid": "a6915080-811c-4fad-84de-ddeb52f0e3ee"
              }
            ],
            "wait_for_default_service_account": false
          }
        }
      ]
    }
  ]
}